设计Admin的js加载环境 渲染逻辑和前端编辑器逻辑所需要的js环境准备完成

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   ],
   "autoload": {
     "psr-4": {
-      "WPReliableMD\\": "src/"
+      "WPReliableMD\\": "src/",
+      "WPReliableMD\\Admin\\": "src/Admin"
     }
   },
   "require": {
