--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
   "license": "GPL-3.0+",
   "authors": [
     {
-      "name": "WP-ReliableMD",
+      "name": "jack9603301",
       "email": "jack9603301@163.com",
-      "homepage": "https://github.com/jack9603301/WP-ReliableMD"
+      "homepage": "https://www.qhjack.cn/"
     },
     {
       "name": "QiuJiangkun",
