--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "psr-4": {
       "WPReliableMD\\": "src/",
       "WPReliableMD\\Admin\\": "src/Admin",
-      "WPReliableMD\\REST\\": "src/REST"
+      "WPReliableMD\\REST\\": "src/REST",
+      "WPReliableMD\\View\\": "src/View"
     }
   },
   "require": {
