--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/jack9603301/WP-ReliableMD"
   },
   "dependencies": {
-    "tui-editor": "^1.2.6"
+    "tui-editor": "^1.2.6",
+    "katex": "^0.9.0"
   }
 }
