1 修改了js加载逻辑 通过init的方法进行注册
2 增加了环境控制器 用来注册js

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
       "WPReliableMD\\": "src/",
       "WPReliableMD\\Admin\\": "src/Admin",
       "WPReliableMD\\REST\\": "src/REST",
-      "WPReliableMD\\View\\": "src/View"
+      "WPReliableMD\\View\\": "src/View",
+      "WPReliableMD\\Environment\\": "src/Environment"
     }
   },
   "require": {
