增加插件元数据

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
       "WPReliableMD\\REST\\": "src/REST",
       "WPReliableMD\\View\\": "src/View",
       "WPReliableMD\\Environment\\": "src/Environment",
-      "WPReliableMD\\View\\Hyperdown\\": "src/View/Hyperdown"
+      "WPReliableMD\\View\\Hyperdown\\": "src/View/Hyperdown",
+      "WPReliableMD\\Meta\\": "src/Meta"
 
     }
   },
