--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: php
 sudo: false
 php:
   - 7.3
+before_install:
+    - mkdir -p test/code_coverage/
+install:
+  - composer require --dev php-coveralls/php-coveralls
 script:
- - bundle install
- - bin/atoum -f .atoum.php
+ - php vendor/bin/phpunit
+after_success:
+  - sh -c 'if( [ "$TRAVIS_PHP_VERSION" != "hhvm" ] ); then php vendor/bin/php-coveralls -v; fi;'
